fixed spacing on comments

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,3 @@
     box-sizing: border-box;
     
 }
-/* 
-.navbar {
-    background-color: #00beef;
-} */
